did a lot of client side WebSocketFacade stuff. should have done more commits along the way